--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
-        <version>5.0.0.RELEASE</version>
+        <version>4.3.12.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -115,6 +115,14 @@
       <version>5.1.3.Final</version>
     </dependency>
     <!-- END: jsr303 validation -->
+
+    <!-- Jackson -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.7.5</version>
+    </dependency>
+    <!-- END: Jackson -->
 
     <!-- For Java 9 -->
     <dependency>
