--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,14 @@
     </dependency>
     <!-- END: Jackson -->
 
+    <!-- FileUpload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <!-- END: FileUpload -->
+
     <!-- For Java 9 -->
     <dependency>
       <groupId>javax.xml.bind</groupId>
