--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 
   <properties>
     <spring-security-web.version>4.2.3.RELEASE</spring-security-web.version>
-
     <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
   </properties>
 
@@ -56,6 +55,19 @@
       <artifactId>spring-orm</artifactId>
     </dependency>
     <!--   END: Spring    -->
+
+    <!-- Spring Security -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring-security-web.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring-security-web.version}</version>
+    </dependency>
+    <!--  END: Spring Security -->
 
     <!--   Servlet  -->
     <dependency>
