--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
     <log4j2.version>2.5</log4j2.version>
     <hibernate.version>5.2.6.Final</hibernate.version>
     <spring.version>4.2.5.RELEASE</spring.version>
-    <spring-security.version>4.0.4.RELEASE</spring-security.version>
-    <com.fasterxml.jackson.version>2.7.2</com.fasterxml.jackson.version>
+    <spring-security.version>4.2.2.RELEASE</spring-security.version>
   </properties>
 
   <dependencies>
@@ -60,6 +59,21 @@
       <version>3.3.4</version>
     </dependency>
 
+    <!--DTO converter-->
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
+    <!--E-Mail-->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+
+
     <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
@@ -101,7 +115,7 @@
     </dependency>
 
 
-    <!-- Spring 3 dependencies -->
+    <!-- Spring dependencies -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
@@ -229,32 +243,12 @@
       <version>0.8.5.1</version>
     </dependency>
 
-
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>${com.fasterxml.jackson.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>2.9.4</version>
     </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>${com.fasterxml.jackson.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>${com.fasterxml.jackson.version}</version>
-    </dependency>
+
 
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -764,6 +758,28 @@
         <configuration>
           <path>/</path>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.0.2</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals><goal>copy</goal></goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>com.github.jsimone</groupId>
+                  <artifactId>webapp-runner</artifactId>
+                  <version>8.5.27.0</version>
+                  <destFileName>webapp-runner.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
 
