--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>h2</artifactId>
       <version>1.3.160</version>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4.1212</version>
+    </dependency>
 
     <!-- Hibernate dependencies -->
     <!-- Core Hibernate O/RM Functionality -->
